--- a/css/design.css
+++ b/css/design.css
@@ -86,9 +86,10 @@ vertical-align: middle;
 }
 
 .thumbnail-image-holder img{
-width:100%; max-height:100%;
+max-width:100%; max-height:100%;
 display:block;
-
+margin-left: auto;
+margin-right: auto;
 }
 
 .thumbsDown:hover{
